Fix: Low contrast for room numbers on dark backgrounds

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -149,7 +149,7 @@ nav {
   margin-left: 0;
 
   color: #000000;
-  background: none;
+  background: rgba(255, 255, 255, 0.75);
 
   border: none;
   box-shadow: none;
